feat: implementar melhorias na geração de relatórios com exportação para Excel
- Corrigir nomes dos campos na view relatorios.index e SimpleExport para alinhamento
- Refatorar função gerarRelatorio para validar dados corretamente
- Adicionar mensagens de erro ao gerar relatórios vazios
- Melhorar cobertura de testes unitários para RelatorioController e ajustes gerais
- Atualização no Readme.md para incluir instação via DOCKER

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Ignore diretórios do sistema operacional
+# Ignore arquivos de sistema operacional
 .DS_Store
 Thumbs.db
 
@@ -33,7 +33,16 @@ composer.lock
 .idea
 .vscode
 .phpunit.result.cache
+.phpunit.cache
 .php_cs.cache
+.phpunit.xml.bak
+
+# Arquivos de backup e temporários
+coverage/
 
 # Arquivos de build do Docker (caso não sejam essenciais para desenvolvimento)
 docker-compose.override.yml
+
+# Cache de IDEs e ferramentas de desenvolvimento
+*.bak
+*.swp
