--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,9 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2'
-          tools: composer, phpunit 
+          tools: composer, phpunit
           extensions: mbstring, pdo, pdo_mysql
-          coverage: none
+          coverage: xdebug
 
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress --no-suggest 
@@ -64,5 +64,13 @@ jobs:
       - name: Generate application key
         run: php artisan key:generate --ansi
 
-      - name: Run tests
-        run: php artisan test
+      - name: Run tests with coverage
+        run: |
+          mkdir -p build/coverage
+          php artisan test --coverage-html build/coverage
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage-report
+          path: build/coverage
