--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,29 +44,36 @@ jobs:
 
       - name: Wait for MySQL
         run: |
-          dockerize -wait tcp://localhost:3306 -timeout 3m
-
+          dockerize -wait tcp://localhost:3306 -timeout 1m
 
       - name: Create .env file
         run: cp .env.example .env
-      
+
       - name: Create .env.testing file
         run: cp .env.example .env.testing
-        
+
+      - name: Set database for testing environment
+        run: |
+          echo "DB_DATABASE=biblioteca_teste" >> .env.testing
+          echo "APP_ENV=testing" >> .env.testing
+
+      - name: Clear application cache
+        run: php artisan config:clear && php artisan cache:clear && php artisan view:clear
+
+      - name: Generate application key
+        run: php artisan key:generate --ansi
+
       - name: Create databases
-        run: php artisan db:create
+        run: php artisan db:create --env=testing
 
       - name: Run migrations for application
         run: php artisan migrate --force
 
       - name: Run migrations for testing
-        run: php artisan migrate --force --env=testing
+        run: php artisan migrate --env=testing
 
       - name: Seed database (optional)
         run: php artisan db:seed --force
-
-      - name: Generate application key
-        run: php artisan key:generate --ansi
 
       - name: Run tests with coverage
         run: |
@@ -78,3 +85,6 @@ jobs:
         with:
           name: coverage-report
           path: build/coverage
+
+      - name: Clean up coverage report
+        run: rm -rf build/coverage
